--- a/jemalloc/BUILD.jemalloc.bazel
+++ b/jemalloc/BUILD.jemalloc.bazel
@@ -14,7 +14,42 @@ filegroup(
 
 filegroup(
     name = "jemalloc_srcs",
-    srcs = glob(["src/**/*.c", "src/**/*.cpp"]),
+    srcs = [
+        "src/arena.c",
+        "src/background_thread.c",
+        "src/base.c",
+        "src/bin.c",
+        "src/bitmap.c",
+        "src/ckh.c",
+        "src/ctl.c",
+        "src/div.c",
+        "src/extent_dss.c",
+        "src/extent_mmap.c",
+        "src/extent.c",
+        "src/hash.c",
+        "src/hook.c",
+        "src/jemalloc_cpp.cpp",
+        "src/jemalloc.c",
+        "src/large.c",
+        "src/log.c",
+        "src/malloc_io.c",
+        "src/mutex_pool.c",
+        "src/mutex.c",
+        "src/nstime.c",
+        "src/pages.c",
+        "src/prng.c",
+        "src/prof.c",
+        "src/rtree.c",
+        "src/safety_check.c",
+        "src/sc.c",
+        "src/stats.c",
+        "src/sz.c",
+        "src/tcache.c",
+        "src/test_hooks.c",
+        "src/ticker.c",
+        "src/tsd.c",
+        "src/witness.c",
+    ],
 )
 
 ## I tested and this builds for me on MAC and Linux, did not check Windows thouigh
